############################
# v0.10.1-beta5 - 23 février 2020
## Nouvelles traductions
- Deux-Siciles
- Fédération Princière
- Japon (partiel)
- Kuomintang de gauche
- Ligue des 8 provinces
- Lituanie (partiel)
- Patagonie
- Somalie
- Partitions

## Autre
- Diverses corrections notamment les variables, les points et les textes de chargement

############################
# v0.10.1-beta4 - 16 février 2020
## Nouvelles traductions
- Afrique du Sud
- Association Nationale de Protection
- Autriche
- Clique d'Anqing
- Confédération des Shan
- Emilie
- Etats Pontificaux
- Fengtian
- Indes orientales néerlandaises
- Ligue des 8 provinces (partiel)
- Lombardie
- Maroc
- Naval (partiel)
- Oman
- Philippines
- Provinces-unies de Chine
- Sao Paulo
- Sardaigne
- Shanxi (partiel)
- Transamour

## Autre
- Diverses corrections notamment les variables, les points et les textes de chargement

############################
# v0.10.1-beta3 - 9 février 2020
## Nouvelles traductions
- Contenu partagé de la Chine
- Hunan
- Indes orientales néerlandaises (partiel)
- Kachin
- Kongo
- Pays-Bas
- Règles de partie
- Suisse
- Toscane
- Vera Cruz

## Autre
- Diverses corrections notamment les couleurs de certains textes

############################
# v0.10.1-beta2 - 26 janvier 2020
## Nouvelles traductions
- Annexions en Asie
- AOG
- Bulgarie
- Equateur (partiel)
- Guerre civile américaine
- Hunnan (partiel)
- Manchourie
- Mittelafrika
- Noms des pays asiatiques
- Pacte de Belgrade
- Pays-Bas (partiel)
- Turkestan

## Autre
- Diverses corrections 

############################
# v0.10.1-beta1 - 12 janvier 2020
## Nouvelles traductions
- Bulgarie (partiel)
- Equateur (partiel)
- Ligue des Huit Provinces (partiel)

## Autre
- Mise à jour de la version 0.10.1
- Diverses corrections notamment sur les équipements

############################
# v0.10-beta2 - 1 janvier 2020
## Nouvelles traductions
- Ligue des Huit Provinces (partiel)
- Nouveaux événements mondiaux : second Risorgimento et Chine
