@@ -402,7 +402,7 @@ JAP_MIL_ROCKET_desc:0 "Les développements de fusées peuvent non seulement four
 ### Événements ###
 
 japdom.1.t:0 "Se remettre de la décennie perdue"
-japdom.1.d:0 "Au cours de ce que l'on a appelé la "décennie perdue", les années 20 ont été marquées par la dépression économique et l'instabilité politique au Japon. La situation était particulièrement grave dans le secteur agricole et a provoqué un changement démographique massif, les agriculteurs fuyant les campagnes déprimées pour s'installer dans les zones urbaines, inondant le marché du travail et faisant encore baisser les salaires.\Après avoir quitté la "coalition constitutionnaliste" dirigée par le Kenseikai et pris la tête du gouvernement, Inukai et son cabinet ont réussi à étendre la sphère d'influence japonaise à la Mandchourie et aux confins de la Sibérie, acquérant ainsi un marché d'exportation vital pour l'économie japonaise, mais la situation agricole a continué à se détériorer alors que les importations agricoles bon marché de Mandchourie se déversaient dans les campagnes. À l'aube de 1936, la poursuite du réarmement et des investissements de l'État ont permis de reconstruire entièrement l'économie industrielle, mais la question de la pauvreté rurale reste chronique et non résolue".
+japdom.1.d:0 "Au cours de ce que l'on a appelé la "décennie perdue", les années 20 ont été marquées par la dépression économique et l'instabilité politique au Japon. La situation était particulièrement grave dans le secteur agricole et a provoqué un changement démographique massif, les agriculteurs fuyant les campagnes déprimées pour s'installer dans les zones urbaines, inondant le marché du travail et faisant encore baisser les salaires.\n\nAprès avoir quitté la "coalition constitutionnaliste" dirigée par le Kenseikai et pris la tête du gouvernement, Inukai et son cabinet ont réussi à étendre la sphère d'influence japonaise à la Mandchourie et aux confins de la Sibérie, acquérant ainsi un marché d'exportation vital pour l'économie japonaise, mais la situation agricole a continué à se détériorer alors que les importations agricoles bon marché de Mandchourie se déversaient dans les campagnes. À l'aube de 1936, la poursuite du réarmement et des investissements de l'État ont permis de reconstruire entièrement l'économie industrielle, mais la question de la pauvreté rurale reste chronique et non résolue".
 japdom.1.a:0 "Gaman shiyou"
 
 japdom.2.t:0 "Dissolution de la diète"
@@ -415,7 +415,7 @@ japdom.3.a:0 "Les Seiyukai ont défendu leur majorité absolue !"
 japdom.3.b:0 "Les Seiyukai ont perdu leur majorité absolue !"
 
 japdom.4.t:0 "L'assassinat de Katayama Sen"
-japdom.4.d:0 "Né en 1859, Katayama Sen était l'un des plus hauts dirigeants syndicalistes du Japon, connu comme le "père du syndicalisme japonais". Exilé aux États-Unis après avoir participé au premier mouvement social-démocrate, Katayama a été témoin et influencé par les activités syndicales de Jack Reed et le développement de l'IWW en CSA. Katayama est retourné au Japon après la restauration constitutionnelle de 1926 et a fondé le premier parti syndicaliste légal au Japon, le Rodo-Nominto (parti travailliste-agriculteur). Après que le parti ait été déclaré illégal en 1932, il a formé un autre parti appelé Shakai Taishuto (parti socialiste des masses), un amalgame de partis sociaux-démocrates et de mouvements syndicalistes.\Hier, alors qu'il était en visite à Kyoto pour féliciter Yamamoto Senji, membre du Taishuto, pour son élection, une bande de trois hommes de droite a pris d'assaut son bureau et a frappé les deux hommes à coups de matraque. Yamamoto a survécu, mais Katayama, âgé de 75 ans, n'a jamais repris conscience et est mort plus tôt dans la journée".
+japdom.4.d:0 "Né en 1859, Katayama Sen était l'un des plus hauts dirigeants syndicalistes du Japon, connu comme le "père du syndicalisme japonais". Exilé aux États-Unis après avoir participé au premier mouvement social-démocrate, Katayama a été témoin et influencé par les activités syndicales de Jack Reed et le développement de l'IWW en CSA. Katayama est retourné au Japon après la restauration constitutionnelle de 1926 et a fondé le premier parti syndicaliste légal au Japon, le Rodo-Nominto (parti travailliste-agriculteur). Après que le parti ait été déclaré illégal en 1932, il a formé un autre parti appelé Shakai Taishuto (parti socialiste des masses), un amalgame de partis sociaux-démocrates et de mouvements syndicalistes.\n\nHier, alors qu'il était en visite à Kyoto pour féliciter Yamamoto Senji, membre du Taishuto, pour son élection, une bande de trois hommes de droite a pris d'assaut son bureau et a frappé les deux hommes à coups de matraque. Yamamoto a survécu, mais Katayama, âgé de 75 ans, n'a jamais repris conscience et est mort plus tôt dans la journée".
 japdom.4.a:0 "Ce sera mauvais..."
 
 japdom.5.t:0 "Friction au sein de la gauche japonaise"
