@@ -138,13 +138,13 @@ JAP_ally5_last:0 "§Y[?global.asian_economic_sphere^4.GetFlag][?global.asian_eco
 JAP_ally6_last:0 "§Y[?global.asian_economic_sphere^5.GetFlag][?global.asian_economic_sphere^5.GetName]§ !"
 JAP_ally7_last:0 "§Y[?global.asian_economic_sphere^6.GetFlag][?global.asian_economic_sphere^6.GetName]§ !"
 JAP_ally8_last:0 "§Y[?global.asian_economic_sphere^7.GetFlag][?global.asian_economic_sphere^7.GetName]§ !"
-JAP_ally9_last:0 "§Y[?global.asian_economic_sphere^8.GetFlag][?global.asian_economic_sphere^8.GetName]§!"
-JAP_ally10_last:0 "§Y[?global.asian_economic_sphere^9.GetFlag][?global.asian_economic_sphere^9.GetName]§!"
-JAP_ally11_last:0 "§Y[?global.asian_economic_sphere^10.GetFlag][?global.asian_economic_sphere^10.GetName]§!"
-JAP_ally12_last:0 "§Y[?global.asian_economic_sphere^11.GetFlag][?global.asian_economic_sphere^11.GetName]§!"
-JAP_ally13_last:0 "§Y[?global.asian_economic_sphere^12.GetFlag][?global.asian_economic_sphere^12.GetName]§!"
-JAP_ally14_last:0 "§Y[?global.asian_economic_sphere^13.GetFlag][?global.asian_economic_sphere^13.GetName]§!"
-JAP_ally15_last:0 "§Y[?global.asian_economic_sphere^14.GetFlag][?global.asian_economic_sphere^14.GetName]§!"
+JAP_ally9_last:0 "§Y[?global.asian_economic_sphere^8.GetFlag][?global.asian_economic_sphere^8.GetName]§! "
+JAP_ally10_last:0 "§Y[?global.asian_economic_sphere^9.GetFlag][?global.asian_economic_sphere^9.GetName]§! "
+JAP_ally11_last:0 "§Y[?global.asian_economic_sphere^10.GetFlag][?global.asian_economic_sphere^10.GetName]§! "
+JAP_ally12_last:0 "§Y[?global.asian_economic_sphere^11.GetFlag][?global.asian_economic_sphere^11.GetName]§! "
+JAP_ally13_last:0 "§Y[?global.asian_economic_sphere^12.GetFlag][?global.asian_economic_sphere^12.GetName]§! "
+JAP_ally14_last:0 "§Y[?global.asian_economic_sphere^13.GetFlag][?global.asian_economic_sphere^13.GetName]§! "
+JAP_ally15_last:0 "§Y[?global.asian_economic_sphere^14.GetFlag][?global.asian_economic_sphere^14.GetName]§! "
 JAP_ally_none:0 ""
 JAP_ally_no_sphere:0 "Aucun"
 JAP_not_invest_within_last_year:0 "N'a pas fait l'objet d'un investissement au cours des douze derniers mois".
@@ -299,7 +299,7 @@ JAP_invest_in_sphere_member2:0 "Promouvoir l'investissement dans [From.GetNameDe
 JAP_invest_in_sphere_member2_desc:0 "Nous devrions commencer à investir dans [From.GetNameDef], ce qui non seulement nous donnera un accès plus facile à leur commerce mais nous permettra également de construire une présence japonaise dans le pays et, éventuellement, de la reprendre de l'intérieur."
 JAP_invest_in_sphere_member3:0 "Promouvoir l'investissement dans [From.GetNameDef]"
 JAP_invest_in_sphere_member3_desc:0 "Nous devrions commencer à investir dans [From.GetNameDef], ce qui non seulement nous donnera un accès plus facile à leur commerce mais nous permettra également de construire une présence japonaise dans le pays et, éventuellement, de la reprendre de l'intérieur."
-JAP_economic_sphere_over:0 "Take Over [From.GetNameDef]" (en anglais)
+JAP_economic_sphere_takeover:0 "Prendre le relais [de.GetNameDef]" 
 JAP_economic_sphere_takeover_desc:0 "Notre pénétration économique de [From.GetNameDef] s'est développée au point que [Root.GetNameDef] les domine entièrement. Le gouvernement [From.GetAdjective] est déjà soumis à nos souhaits... il ne reste plus qu'à se débarrasser de la fiction polie de leur indépendance".
 JAP_co_prosperity_member_decisions:0 "La sphère de coprospérité japonaise"
 JAP_co_prosperity_member_decisions_desc:0 "La sphère de coprospérité est composée d'une partie d'alliance militaire et d'une partie de coopération économique - bien que ces deux aspects soient dominés par [JAP.GetNameDef], qui domine l'Asie de l'Est. Les Japonais sont déterminés à lutter contre l'empiètement de l'impérialisme occidental, même si - dans une certaine mesure - cela signifie qu'ils deviennent eux-mêmes impérialistes".
