@@ -3,13 +3,14 @@
 ## Nouvelles traductions
 - Deux-Siciles
 - Fédération Princière
-- Japon (partiel)
 - Kuomintang de gauche
 - Ligue des 8 provinces
 - Lituanie (partiel)
 - Patagonie
 - Somalie
 - Partitions
+- Japon Domestic
+- Japon Foreign
 
 ## Autre
 - Diverses corrections notamment les variables, les points et les textes de chargement
